# graphrecords

./: AI_POLICY.md  CHANGELOG-python.md  CHANGELOG-rust.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  cliff-python.toml  cliff-rust.toml  release-drafter-python.yml  release-drafter-rust.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: check-pr-title.yml  coverage-badge.yml  coverage.yml  create-epic-branch.yml  epic-sub-issues.yml  formatting.yml  linting.yml  pr-comment.yml  pr-title.yml  prepare-release.yml  project-board-automation.yml  publish-documentation.yml  publish.yml  release-drafter.yml  semver-checks.yml  testing.yml
crates/graphrecords/: Cargo.toml
crates/graphrecords-core/: Cargo.toml
crates/graphrecords-core/src/: lib.rs  prelude.rs
crates/graphrecords-core/src/errors/: graph.rs  graphrecord.rs  mod.rs
crates/graphrecords-core/src/graphrecord/: attributes.rs  connector.rs  group_mapping.rs  intern_table.rs  lookup.rs  mod.rs  plugin.rs  plugins.rs  polars.rs  schema.rs
crates/graphrecords-core/src/graphrecord/datatypes/: attribute.rs  mod.rs  value.rs
crates/graphrecords-core/src/graphrecord/graph/: edge.rs  mod.rs  node.rs
crates/graphrecords-core/src/graphrecord/overview/: mod.rs  tabled_modifiers.rs
crates/graphrecords-core/src/graphrecord/plugins/: graphrecord.rs  mod.rs
crates/graphrecords-core/src/graphrecord/querying/: group_by.rs  mod.rs  wrapper.rs
crates/graphrecords-core/src/graphrecord/querying/attributes/: group_by.rs  mod.rs  operand.rs  operation.rs
crates/graphrecords-core/src/graphrecord/querying/edges/: group_by.rs  mod.rs  operand.rs  operation.rs
crates/graphrecords-core/src/graphrecord/querying/nodes/: group_by.rs  mod.rs  operand.rs  operation.rs
crates/graphrecords-core/src/graphrecord/querying/operand_traits/: aggregation.rs  arithmetic.rs  comparison.rs  indexing.rs  is_type.rs  logic.rs  membership.rs  numeric_utils.rs  string_ops.rs  structure.rs
crates/graphrecords-core/src/graphrecord/querying/values/: group_by.rs  mod.rs  operand.rs  operation.rs
crates/graphrecords-pyo3-interop/: Cargo.toml  README.md
crates/graphrecords-pyo3-interop/src/: conversion.rs  lib.rs  traits.rs
crates/graphrecords-python/: Cargo.toml  README.md
crates/graphrecords-python/src/: conversion_lut.rs  gil_hash_map.rs  lib.rs  prelude.rs  pyo3_bindings.rs
crates/graphrecords-python/src/graphrecord/: attribute.rs  borrowed.rs  connector.rs  datatype.rs  errors.rs  handle.rs  mod.rs  overview.rs  plugins.rs  schema.rs  traits.rs  value.rs
crates/graphrecords-python/src/graphrecord/querying/: attributes.rs  edges.rs  mod.rs  nodes.rs  values.rs
crates/graphrecords-utils/: Cargo.toml
crates/graphrecords-utils/src/: aliases.rs
crates/graphrecords/src/: lib.rs  prelude.rs
crates/py-graphrecords/: Cargo.toml
crates/py-graphrecords/src/: lib.rs
docs/: conf.py  index.md  serve_docs.py
docs/api/: graphrecord.md  index.md
docs/developer_guide/: docstrings.md  index.md  internal-workflow.md  pull-request.md  setup.md
docs/user_guide/: 01_install_graphrecords.md  02_graphrecord.md  02b_schema.md  index.md
docs/user_guide/02a_query_engine/: index.md  query_engine_attributes_and_values.md  query_engine_group_by.md  query_engine_or_not.md  query_function_arguments.md
docs/user_guide/02a_query_engine/scripts/: attributes_and_values.py  group_by.py  query_engine.py  show_dataset.py
docs/user_guide/scripts/: 02_graphrecord_intro.py
graphrecords/: __init__.py  _graphrecords.pyi  builder.py  connectors.py  datatype.py  graphrecord.py  indexers.py  overview.py  plugins.py  querying.py  schema.py  types.py
graphrecords/_graphrecords/: datatype.pyi  graphrecord.pyi  handle.pyi  overview.pyi  plugins.pyi  querying.pyi  schema.pyi
tests/: coverage_report.py  test_builder.py  test_connectors.py  test_datatype.py  test_graphrecord.py  test_indexers.py  test_plugins.py  test_querying.py  test_schema.py  test_types.py
tests/simple_dataset/: README.md
