[workspace]
members = ["crates/*"]
default-members = ["crates/graphrecords", "crates/graphrecords-core", "crates/graphrecords-utils"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/medmodels/graphrecords"
license = "MIT"
readme = "README.md"
description = "High-performance graph-based data records"

[workspace.dependencies]
hashbrown = { version = "0.16.1", features = ["serde", "rayon"] }
serde = { version = "1.0.203", features = ["derive", "rc"] }
polars = { version = "0.53.0", features = ["polars-io", "dtype-full"] }
chrono = { version = "0.4.38", features = ["serde"] }
pyo3 = { version = "0.27", features = ["chrono"] }
parking_lot = { version = "0.12.5", features = ["serde"] }
rayon = "1.10.0"
bincode = "1.3.3"
typetag = "0.2.21"

graphrecords = { version = "0.1.0", path = "crates/graphrecords" }
graphrecords-core = { version = "0.1.0", path = "crates/graphrecords-core" }
graphrecords-utils = { version = "0.1.0", path = "crates/graphrecords-utils" }
graphrecords-python = { version = "0.1.0", path = "crates/graphrecords-python" }
py-graphrecords = { version = "0.1.0", path = "crates/py-graphrecords" }
graphrecords-pyo3-interop = { version = "0.1.0", path = "crates/graphrecords-pyo3-interop" }

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
option_if_let_else = "allow"
used_underscore_items = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"
similar_names = "allow"
# TODO(#13): Re-enable once docs are written
missing_errors_doc = "allow"
