[package]
name = "graphrecords-core"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
graphrecords-utils = { workspace = true }

polars = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }

rand = "0.9.1"
ron = "0.8.1"
roaring = "0.10.6"
itertools = "0.13.0"
tabled = "0.20.0"

serde = { workspace = true, optional = true }
typetag = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
plugins = []
plugins_serde = ["plugins", "serde", "dep:typetag"]

[lints]
workspace = true
