[package]
name = "graphrecords-pyo3-interop"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"

[dependencies]
graphrecords = { workspace = true }
graphrecords-python = { workspace = true }

pyo3 = { workspace = true }
bincode = { workspace = true }

[lints]
workspace = true
