[package]
name = "graphrecords-python"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"

[dependencies]
graphrecords-core = { workspace = true, features = [
    "serde",
    "plugins",
    "plugins_serde",
] }
graphrecords-utils = { workspace = true }

polars = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true }
pyo3 = { workspace = true }
bincode = { workspace = true }
parking_lot = { workspace = true }
typetag = { workspace = true }

pyo3-polars = "0.21.0"

[lints]
workspace = true
