[package]
name = "graphrecords"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
graphrecords-core = { workspace = true }
graphrecords-utils = { workspace = true }

[features]
serde = ["graphrecords-core/serde"]

[lints]
workspace = true
