[package]
name = "graphrecords"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
graphrecords-core = { workspace = true }
graphrecords-utils = { workspace = true }

[features]
plugins = ["graphrecords-core/plugins"]
serde = ["graphrecords-core/serde"]
connectors = ["graphrecords-core/connectors"]

[lints]
workspace = true
