[package]
name = "py-graphrecords"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[lib]
name = "graphrecords"
crate-type = ["cdylib"]

[dependencies]
graphrecords = { workspace = true }
graphrecords-python = { workspace = true }

pyo3 = { workspace = true }
